# actix-report-designer

./: .env  Cargo.toml
src/: lib.rs  main.rs
src/backend/: service.rs
src/backend/context/: jwt_session.rs
src/backend/services/: generic_services.rs
src/ui/: canvas.rs  login.rs  report_designer.rs  toolbox.rs  ui_properties.rs
