[package]
name = "egui-report-designer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenvy = "0.15.7"
eframe = "0.31.0"
egui = "0.31.0"
reqwest = "0.12.12"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-rustls", "bigdecimal","macros"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio-util = { version = "0.7.13", features = ["full"] }
tiberius = "0.12.3"
