[package]
name = "actix-report-designer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenvy = "0.15.7"
eframe = "0.31.0"
egui = "0.31.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = { version = "1.43.0", features = ["full"] }
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio-util = { version = "0.7.13", features = ["full"] }
tiberius = "0.12.3"
bb8-tiberius = "0.16.0"
bb8 = "0.9.0"
chrono = { version = "0.4.40", features = ["serde"] }
jsonwebtoken = "9.3.1"
env_logger = "0.11.6"
aes = "0.8.4"
base64 = "0.22.1"
ctr = "0.9.2"
sha2 = "0.10.8"